fix: header z-index increased

--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -7,7 +7,7 @@ header {
   left: 50%;
   transform: translateX(-50%);
   height: 61px;
-  z-index: 1;
+  z-index: 1000;
   display: flex;
   align-items: center;
   justify-content: center;
